--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,4 +1,4 @@
-accion.actualizar=Update
+accion.actualiza=Update
 accion.agregar=Add
 accion.eliminar=Delete
 accion.guardar=Save
@@ -84,3 +84,67 @@ usuario.total=Total Users
 usuario.username=User
 #Propiedad de prueba
 test=esto es una prueba
+banner.msg1=Boost your Business with Our Innovative Platform
+banner.msg2=Discover how our technology can transform your operations and increase your productivity.
+banner.boton=Start Now
+banner.beneficios=Main Benefits
+banner.ahorro=Time Saving
+banner.msg3=Automate your processes and save more time for what really matters.
+banner.msg4=Increased Efficiency
+banner.msg5=Optimize your operations with our advanced tools.
+banner.msg6=24/7 Support
+banner.msg7=Our support team is available all day to help you.
+banner.planes=See plans
+curso.titulo=Assistance - Courses
+curso.titulo2=Select Course for Assistance
+curso.text=Course
+curso.boton=Select
+curso.titulo3=Take attendance
+curso.titulo4=Take Course Attendance:
+fecha=Date
+accion.asistir=Attended
+asistencia.boton=Register Attendance
+calificacion.titulo=Create/Edit Student Grade
+calificacion.matricula=Registration ID:
+calificacion.lab1=Laboratory 1:
+calificacion.lab2=Laboratory 2:
+calificacion.quiz1=Quiz 1:
+calificacion.quiz2=Quiz 2:
+calificacion.ex1=Exam 1:
+calificacion.ex2=Exam 2:
+calificacion.proyecto=Project
+calificacion.volver=Back to list
+calificacion.titulo2=Add/Edit Student Grade
+calificacion.nota=Final student grade
+calificacion.aprobado=Approved
+calificacion.titulo3=Student Grade List
+accion.editar=Edit
+calificacion.titulo4=Add New Student Grade
+curso.titulo5=Course Management
+curso.agregar=Add Course
+curso.nombre=Course name
+profesor=Teacher
+curso.actualizar=Update Course
+curso.titulo6=List of Courses
+curso.titulo7=There are no courses available.
+curso.titulo8=Select Course
+calificar=Qualify
+asistencia=Attendance
+estudiante.titulo=Students
+estudiante.titulo2=Student management
+estudiante.titulo3=Add Student
+estudiante.id=ID
+estudiante.nombre=Student name\n
+estudiante.apellido1=First Last Name
+estudiante.apellido2=Second Last Name
+estudiante.correo=Email
+estudiante.tel=Phone
+estudiante.titulo4=Update Student
+curso.text2=Courses
+periodo=Period
+estudiante.titulo5=Students List
+estudiante.clases=Registered classes
+estudiante.titulo6=There are no registered students.
+plantilla.principal=Homepage
+plantilla.planes=Plans
+plantilla.login=Login
