--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -1,4 +1,4 @@
-accion.actualizar=Actualizar
+accion.actualiza=Actualizar
 accion.agregar=Agregar
 accion.eliminar=Eliminar
 accion.guardar=Guardar
@@ -85,3 +85,67 @@ usuario.total=Total Usuarios
 usuario.username=Usuario
 #Propiedad de prueba
 test=esto es una prueba
+banner.msg1=Impulsa tu Negocio con Nuestra Plataforma Innovadora
+banner.msg2=Descubre c\u00f3mo nuestra tecnolog\u00eda puede transformar tus operaciones y aumentar tu productividad.
+banner.boton=Comienza Ahora
+banner.beneficios=Beneficios Principales
+banner.ahorro=Ahorro de Tiempo
+banner.msg3=Automatiza tus procesos y gana m\u00e1s tiempo para lo que realmente importa.
+banner.msg4=Incremento de Eficiencia
+banner.msg5=Optimiza tus operaciones con nuestras herramientas avanzadas.
+banner.msg6=Soporte 24/7 
+banner.msg7=Nuestro equipo de soporte est\u00e1 disponible todo el d\u00eda para ayudarte.
+banner.planes=Ver planes
+curso.titulo=Asistencia - Cursos
+curso.titulo2=Seleccionar Curso para Asistencia
+curso.text=Curso
+curso.boton=Seleccionar
+curso.titulo3=Tomar Asistencia
+curso.titulo4=Tomar Asistencia para Curso:
+fecha=Fecha
+accion.asistir=Asisti\u00f3
+asistencia.boton=Registrar Asistencia 
+calificacion.titulo=Crear/Editar Calificaci\u00f3n
+calificacion.matricula=Matricula ID:
+calificacion.lab1=Laboratorio 1:
+calificacion.lab2=Laboratorio 2:
+calificacion.quiz1=Quiz 1:
+calificacion.quiz2=Quiz 2:
+calificacion.ex1=Examen 1:
+calificacion.ex2=Examen 2:
+calificacion.proyecto=Proyecto
+calificacion.volver=Volver a la lista
+calificacion.titulo2=Agregar/Editar Calificaci\u00f3n
+calificacion.nota=Nota Final
+calificacion.aprobado=Aprobado
+calificacion.titulo3=Lista de Calificaciones
+accion.editar=Editar
+calificacion.titulo4=Agregar Nueva Calificaci\u00f3n
+curso.titulo5=Gesti\u00f3n de Cursos
+curso.agregar=Agregar Curso
+curso.nombre=Nombre del curso
+profesor=Profesor
+curso.actualizar=Actualizar Curso
+curso.titulo6=Listado de Cursos
+curso.titulo7=No hay cursos disponibles.
+curso.titulo8=Seleccionar Curso
+calificar=Calificar
+asistencia=Asistencia
+estudiante.titulo=Estudiantes
+estudiante.titulo2=Gesti\u00f3n de estudiantes
+estudiante.titulo3=Agregar Estudiante
+estudiante.id=Identificaci\u00f3n
+estudiante.nombre=Nombre del estudiante
+estudiante.apellido1=Primer Apellido
+estudiante.apellido2=Segundo Apellido
+estudiante.correo=Correo
+estudiante.tel=Tel\u00e9fono
+estudiante.titulo4=Actualizar Estudiante
+curso.text2=Cursos
+periodo=Per\u00edodo
+estudiante.titulo5=Listado Estudiantes
+estudiante.clases=Clases inscritas
+estudiante.titulo6=No hay estudiantes registrados.
+plantilla.principal=P\u00e1gina principal
+plantilla.planes=Planes
+plantilla.login=Iniciar Sesion
