Internalizacion-Aplicacion de lenguaje en los templates que faltaban, agregar boton de lenguaje

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -134,7 +134,7 @@ asistencia=Asistencia
 estudiante.titulo=Estudiantes
 estudiante.titulo2=Gesti\u00f3n de estudiantes
 estudiante.titulo3=Agregar Estudiante
-estudiante.id=Identificaci\u00f3n
+estudiante.id=ID del Estudiante
 estudiante.nombre=Nombre del estudiante
 estudiante.apellido1=Primer Apellido
 estudiante.apellido2=Segundo Apellido
@@ -149,3 +149,69 @@ estudiante.titulo6=No hay estudiantes registrados.
 plantilla.principal=P\u00e1gina principal
 plantilla.planes=Planes
 plantilla.login=Iniciar Sesion
+plantilla2.titulo=Insertar Nuevo Curso
+plantilla2.titulo2=Insertar Nuevo Periodo
+plantilla2.titulo3=Insertar Estudiante
+plantilla2.titulo4=Insertar Matricula
+configuracion=Configuraci\u00f3n
+login.inicio=Por favor inicia sesi\u00f3n
+login.usuario=Usuario
+login.contrasena=Contrase\u00f1a
+login.recordar=Recu\u00e9rdame
+login.sesion=Iniciar sesion
+matricula.titulo=Matr\u00edculas
+matricula.titulo2=Gesti\u00f3n de Matr\u00edculas
+matricula.titulo3=Agregar Matr\u00edcula
+estudiante=Estudiante
+matricula.titulo4=Actualizar Matr\u00edcula
+curso.id=ID del Curso
+periodo.id=ID del Periodo
+matricula.titulo5=Listado de Matr\u00edculas
+matricula.titulo6=No hay matr\u00edculas registradas.
+periodos=Periodos
+periodo.titulo=Gesti\u00f3n de Periodos
+periodo.titulo2=Agregar Periodo
+periodo.ano=A\u00f1o
+periodo.cuatrimestre=Cuatrimestre
+periodo.fechai=Fecha de Inicio
+periodo.fechaf=Fecha de Fin
+periodo.titulo3=Actualizar Matr\u00edcula
+periodo.titulo4=Listado de Periodos
+acciones=Acciones
+periodo.titulo5=No hay periodos disponibles.
+suscripcion=Suscripci\u00f3n
+planes=Planes
+planes.titulo=Gestiona tus lecciones y estudiantes sin esfuerzo con nuestra plataforma intuitiva y poderosa.
+planes.titulo2=Di adi\u00f3s al caos de los registros manuales y abraza una forma m\u00e1s inteligente y efectiva de administrar tu aula.
+planes.titulo3=Nombre del plan
+planes.titulo4=Descripci\u00f3n del plan
+planes.suscribirse=Suscribirse
+planes.titulo5=Comparar planes
+estudiantes.cantidad=Cantidad de Estudiantes
+planes.titulo6=Soporte por Correo Electr\u00f3nico
+planes.titulo7=Soporte Personalizado
+planes.titulo8=Almacenamiento en la Nube
+planes.titulo9=Reportes Avanzados 
+planes.titulo10=Acceso a Centro de Ayuda
+planes.titulo11=Formulario de Suscripci\u00f3n
+planes.titulo12=Complete el formulario para suscribirse al plan seleccionado.
+carrito.titulo1=Su carrito
+precio=Precio
+precio.total=Total (USD)
+precio.canjear=Canjear
+profesor.detalle=Detalles del Profesor
+id.requerido=Identificaci\u00f3n es requerida.
+nombre.requerido=Nombre es requerido.
+apellido1.requerido=Primer Apellido es requerido.
+apellido2.requerido=Segundo Apellido es requerido.
+correo.requerido=Correo es requerido.
+tel.requerido=Tel\u00e9fono es requerido.
+usuario.requerido=Usuario es requerido.
+activar.cuenta=Activar Cuenta
+activar.titulo=Ingrese una nueva contrase\u00f1a y actualice sus datos si es necesario.
+usuario.apellido1=Primer Apellido
+usuario.apellido2=Segundo Apellido
+usuario.contrasena=Nueva Contrase\u00f1a
+contrasena.requerida=Nueva Contrase\u00f1a es requerida.
+activar.cuenta2=Registro Pendiente de Activaci\u00f3n 
+activar.cuenta3=Hemos enviado un enlace a su correo electr\u00f3nico para finalizar su registro. Por favor, revise su bandeja de entrada y siga las instrucciones para activar su cuenta.
