--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -133,7 +133,7 @@ asistencia=Attendance
 estudiante.titulo=Students
 estudiante.titulo2=Student management
 estudiante.titulo3=Add Student
-estudiante.id=ID
+estudiante.id=Student ID
 estudiante.nombre=Student name\n
 estudiante.apellido1=First Last Name
 estudiante.apellido2=Second Last Name
@@ -148,3 +148,69 @@ estudiante.titulo6=There are no registered students.
 plantilla.principal=Homepage
 plantilla.planes=Plans
 plantilla.login=Login
+plantilla2.titulo=Insert New Course
+plantilla2.titulo2=Insert New Period
+plantilla2.titulo3=Insert Student
+plantilla2.titulo4=Insert Student Registration
+configuracion=Configuration
+login.inicio=Please log in
+login.usuario=User
+login.contrasena=Password
+login.recordar=Remember me
+login.sesion=Login
+matricula.titulo=Student registrations
+matricula.titulo2=Student Enrollment Management
+matricula.titulo3=Add Registration
+estudiante=Student
+matricula.titulo4=Update Student Registration
+curso.id=Course ID
+periodo.id=Period ID
+matricula.titulo5=Student Enrollment List
+matricula.titulo6=There are no registered student enrollments.
+periodos=Periods
+periodo.titulo=Period Management
+periodo.titulo2=Add Period
+periodo.ano=Year
+periodo.cuatrimestre=Four-month period
+periodo.fechai=Start Date
+periodo.fechaf=End Date
+periodo.titulo3=Update Student Registration
+periodo.titulo4=List of Periods
+acciones=Actions
+periodo.titulo5=There are no periods available.
+suscripcion=Subscription
+planes=Plans
+planes.titulo=Manage your lessons and students effortlessly with our intuitive and powerful platform.
+planes.titulo2=Say goodbye to the chaos of manual check-ins and embrace a smarter, more effective way to manage your classroom.
+planes.titulo3=Plan name
+planes.titulo4=Plan Description
+planes.suscribirse=Subscribe
+planes.titulo5=Compare plans
+estudiantes.cantidad=Number of Students
+planes.titulo6=Email Support
+planes.titulo7=Personalized Support
+planes.titulo8=Cloud Storage
+planes.titulo9=Advanced Reports
+planes.titulo10=Access to Help Center
+planes.titulo11=Subscription Form
+planes.titulo12=Complete the form to subscribe to the selected plan.
+carrito.titulo1=Your cart
+precio=Price
+precio.total=Total (USD)
+precio.canjear=Redeem
+profesor.detalle=Teacher Details
+id.requerido=Identification is required.
+nombre.requerido=Name is required.
+apellido1.requerido=First Last Name is required.
+apellido2.requerido=Second Last Name is required.
+correo.requerido=Email is required.
+tel.requerido=Telephone is required.
+usuario.requerido=User is required.
+activar.cuenta=Activate Account
+activar.titulo=Enter a new password and update your details if necessary.
+usuario.apellido1=First Last Name
+usuario.apellido2=Second Last Name
+usuario.contrasena=New Password
+contrasena.requerida=New Password is required.
+activar.cuenta2=Registration Pending Activation
+activar.cuenta3=We have sent a link to your email to complete your registration. Please check your inbox and follow the instructions to activate your account.
