--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -107,9 +107,9 @@ accion.asistir=Asisti\u00f3
 asistencia.boton=Registrar Asistencia 
 calificacion.titulo=Crear/Editar Calificaci\u00f3n
 calificacion.matricula=Matricula ID:
-calificacion.lab1=Laboratorio 1:
-calificacion.lab2=Laboratorio 2:
-calificacion.quiz1=Quiz 1:
+calificacion.eval1=Evaluacion 1:
+calificacion.eval2=Evaluacion 2:
+calificacion.eval3=Evaluacion 3:
 calificacion.quiz2=Quiz 2:
 calificacion.ex1=Examen 1:
 calificacion.ex2=Examen 2:
@@ -215,3 +215,6 @@ usuario.contrasena=Nueva Contrase\u00f1a
 contrasena.requerida=Nueva Contrase\u00f1a es requerida.
 activar.cuenta2=Registro Pendiente de Activaci\u00f3n 
 activar.cuenta3=Hemos enviado un enlace a su correo electr\u00f3nico para finalizar su registro. Por favor, revise su bandeja de entrada y siga las instrucciones para activar su cuenta.
+calificacion.eva2=Evaluacion 2:
+calificacion.eva1=Evaluacion 1:
+calificacion.eva3=Evaluacion 3:
