--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -106,9 +106,9 @@ accion.asistir=Attended
 asistencia.boton=Register Attendance
 calificacion.titulo=Create/Edit Student Grade
 calificacion.matricula=Registration ID:
-calificacion.lab1=Laboratory 1:
-calificacion.lab2=Laboratory 2:
-calificacion.quiz1=Quiz 1:
+calificacion.eva1=Assessment 1:
+calificacion.eva2=Assessment 2:
+calificacion.eva3=Assessment 3:
 calificacion.quiz2=Quiz 2:
 calificacion.ex1=Exam 1:
 calificacion.ex2=Exam 2:
@@ -214,3 +214,6 @@ usuario.contrasena=New Password
 contrasena.requerida=New Password is required.
 activar.cuenta2=Registration Pending Activation
 activar.cuenta3=We have sent a link to your email to complete your registration. Please check your inbox and follow the instructions to activate your account.
+calificacion.eval2=Assessment 2:
+calificacion.eval1=Assessment 1:
+calificacion.eval3=Assessment 3:
